# software_maintenance_agent

./: .env.example  .gitignore  BUILD_PLAN.md  PROGRESS.md  README.md  prompt.md  pyproject.toml
benchmark/suites/: mvp.json
configs/: safety.yml
docs/: COMMAND_POLICY.md
docs/internal/: BUILD_PLAN.md
docs/internal/prompts/: file_selection.md  patch_plan.md
examples/tasks/: medbuddy_negation.json  medbuddy_word_boundary.json  python_email_empty.json  python_email_repair.json
prompts/: file_selection.md  issue_triage.md  patch_plan.md
src/patchpilot/: __init__.py  agent.py  cli.py  dashboard.py  github_integration.py  patching.py  redaction.py  repo_inspect.py  report.py  retrieval.py  risk.py  sandbox.py  settings.py  storage.py
src/patchpilot/evals/: benchmark.py
src/patchpilot/jepa/: dataset.py  encoders.py  predictor.py
src/software_maintaince_agent/: __init__.py  agent.py  cli.py  command_policy.py  dashboard.py  github_integration.py  llm.py  models.py  patching.py  publisher.py  repo_inspect.py  report.py  retrieval.py  risk.py  run_index.py  sandbox.py  settings.py  storage.py
src/software_maintaince_agent/evals/: benchmark.py
src/software_maintaince_agent/jepa/: __init__.py  dataset.py  encoders.py  predictor.py
tests/: conftest.py  test_agent_loop.py  test_benchmark_metrics.py  test_cli_commands.py  test_command_policy.py  test_dashboard.py  test_docker_sandbox.py  test_gemini_retry.py  test_github.py  test_llm_patcher.py  test_repo_and_retrieval.py  test_run_index.py  test_sandbox.py  test_schemas_and_redaction.py
(+3 files in other folders)
