[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "software_maintaince_agent"
version = "0.1.0"
description = "Local maintenance runner for small, tested patch candidates."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[project.scripts]
ama = "software_maintaince_agent.cli:app"
software_maintaince_agent = "software_maintaince_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
